--- a/StyleCLIP_test.ipynb
+++ b/StyleCLIP_test.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPEbQOpg2+SrHsR8Hz0inWh",
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -21,16 +19,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/nannahyo/test/blob/main/StyleCLIP_test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "1. Install CLIP\n",
         "가장 먼저 CLIP 라이브러리를 설치한다. CLIP은 image Encoder와 text Encoder를 포함하고 있는 네트워크로, 특정한 이미지와 특정한 문장이 서로 얼마나 닮아 있는지, 그 similarity를 구할 수 있도록 해준다. \n",
@@ -43,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -110,7 +98,7 @@
         "id": "hgeB054rRLMV",
         "outputId": "c084124a-87ba-4ffe-bd00-e41aff88187f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +128,7 @@
         "id": "DvbdgN_sROht",
         "outputId": "1266e7ff-953d-4a07-842d-969db60b7962"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,7 +177,7 @@
       "metadata": {
         "id": "K3BHyCIdRUG1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,7 +212,7 @@
       "metadata": {
         "id": "Af-nr92BRXXv"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +242,7 @@
         "id": "loLIHETjRak2",
         "outputId": "e7c2ce13-1b86-4a29-8199-fc7818812900"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,7 +283,7 @@
       "metadata": {
         "id": "Rn-EsRIGRfRg"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -366,7 +354,7 @@
         "id": "8gnAd7g9RiW2",
         "outputId": "a1a742d1-c228-46b7-a9f0-0d0f69a6121f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,12 +531,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 529
+          "height": 438
         },
         "id": "bmiYVcGdS6x_",
         "outputId": "edb47081-b134-41d8-8fd4-82200734f399"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -574,12 +562,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 941
+          "height": 959
         },
         "id": "nzCWSDY9TAtf",
         "outputId": "f5952a18-a0d6-48df-d6a8-03d96fda800e"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
