--- a/StyleCLIP_test.ipynb
+++ b/StyleCLIP_test.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPEbQOpg2+SrHsR8Hz0inWh",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +19,16 @@
     "gpuClass": "standard"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nannahyo/test/blob/main/StyleCLIP_test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
