--- a/StyleCLIP_test.ipynb
+++ b/StyleCLIP_test.ipynb
@@ -216,6 +216,23 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "5. Latent Optimization\n",
+        "기본 설명 : Latent Optimization은 CLIP 네트워크에 포함되어있는 Text Encoder와 image Encoder, StyleGAN을이용해서 image manipulation을 진행한다. 즉 Latent vector w를 업데이트하되, Latent vector w로 만들어진 이미지의 그 inbuilding이 특정한 text prompt와 similarity가 높아질 수 있는 방향으로 Latent vector를 업데이트하는 것이다. 일반적으로 latent vector를 만들 때에는 특정한 이미지에서부터 인코딩을 하거나 랜덤 샘플링을 이용해 latent vector를 만들 수 있다. 여기서는 랜덤 latent vector를 사용한다.\n",
+        "‘mean_latent’는 평균치의 값을 갖고있는 latent를 의미한다. 이때 truncation 트릭을 이용해서 보다 realistic한 이미지를 만들어낼 수 있다. truncation은 특정한 latent vector가 mean_latent로부터 크게 벗어나지 않도록 latent를 잘라내주는 역할을 수행하는 트릭이다. 아래 코드에서처럼, 0.7정도의 값을 넣었을 때(truncation=0.7) 그럴싸한 랜덤 이미지가 만들어지는 경향이 있다.\n",
+        "StyleCLIP의 가장 기본적인 방법은 Optimization method이다. \n",
+        "CLIP Loss가 핵심이다. Latent vector w를 원본 이미지와 유사하게 업테이트를 하는 동시에, 특정한 texp prompt와 생성된 이미지가 유사한 similarity를 갖도록 같이 업데이트하는 것이다.\n",
+        "* 우리가 사용하고 있는 사전 학습된 StyleGAN 모델은 1024*1024의 고해상도 이미지를 만들어내기때문에 아래의 코드(image.resize((h // 2, w // 2)))처럼 너비와 높이를 2배씩 줄여서 화면에 간단히 출력될 수 있도록 하였다.\n",
+        "\n",
+        "\n",
+        "- 아래 코드 : a random latent vector를 a mean latent vector를 이용해 초기화하고 시각화하기"
+      ],
+      "metadata": {
+        "id": "zq8IGEdZNbK6"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from torchvision.utils import make_grid\n",
@@ -266,6 +283,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- 코드 구현을 위한 parameter set하기\n",
+        "아래의 코드에서 description은 text prompt이다.\n",
+        "l2_lamda는 가중치 parameter(λ_L2)이다. λ_L2가 커질수록 원본 이미지와 유사해지려는 힘이 강해지고, λ_L2가 작다면 특정한 text prompt와 높은 similarity를 갖게 될 것이다."
+      ],
+      "metadata": {
+        "id": "V67XQxzmNs2y"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from argparse import Namespace\n",
@@ -285,6 +313,27 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- latent vector를 optimize하고 결과 얻기\n",
+        "기본적으로 StyleCLIP은 learning rate을 각 스텝마다 적절히 조정해서 적용할 수 있도록 하는learning rate adjustment function을 사용한다. 즉, 고정된 특정 learning rate만 사용하는 것이 아니라 스텝이 반복되는 과정에서 learning rate을 적절히 조정해서 optimization을 보다 매끄럽게 수행할 수 있도록 하는 것이다.\n",
+        "위에서 입력한 description ‘A really sad face’는 먼저 tokenize 된 이후에, 실제 clip encoder에 들어갈 수 있다.\n",
+        "Adam optimizer를 사용해서 latent vector를 업데이트할 수 있도록한다.\n",
+        "각각의 스텝마다 아래의 코드내용이 반복적으로 수행된다.\n",
+        "먼저 learning rate을 조정한다.\n",
+        "latent vector를 이용해서 image를 생성한다.\n",
+        "그렇게 생성된 image와 우리가 입력한 text prompt가 유사한 similarity를 갖도록 업데이트를 해준다.(c_loss)\n",
+        "그와 동시에 초기 latent vector와 유사한 형태를 가지도록 latent vector를 제안하는 loss를 넣어준다.(l2_loss)\n",
+        "이러한 두가지 loss를 이용해서 latent vector를 optimization한다.\n",
+        "이러한 loss를 기반으로 backpromptgation한 뒤에, gradient를 구한다.\n",
+        "그렇게 구한 gradient를 이용하여 latent vector를 업데이트한다.\n",
+        "이 코드 전체를 실행하는데에 약 2~3분 정도의 시간이 소요된다."
+      ],
+      "metadata": {
+        "id": "KBYuAYgqNwpp"
+      }
     },
     {
       "cell_type": "code",
@@ -522,6 +571,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "6, 결과 시각화하기\n",
+        "최적화 결과, 조금 슬픈 표정을 짓는 얼굴을 확인할 수 있다."
+      ],
+      "metadata": {
+        "id": "QSqzbGTJOGeC"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "result_image = ToPILImage()(make_grid(final_result.detach().cpu(), normalize=True, scale_each=True, range=(-1, 1), padding=0))\n",
@@ -550,6 +609,16 @@
           "execution_count": 10
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7. amination video 생성하고 다운로드받기\n",
+        " 이미지가 서서히 변화하는 과정을 담은 비디오를 다운로드 받을 수 있다. 총 150번의 스텝을 반복했기 때문에 150 프레임으로 구성된 동영상을 생성하여 다운로드할 수 있다. 다운로드는 코드를 실행하면 자동으로 된다. 보고서에 작성된 이미지에 대한 비디오는 Github에 ‘out video’으로 올라가있다."
+      ],
+      "metadata": {
+        "id": "neI_hnKLOOeC"
+      }
     },
     {
       "cell_type": "code",
